--- a/css/bigbang.css
+++ b/css/bigbang.css
@@ -66,7 +66,7 @@ canvas {
 hr {
     border-top: solid white 2px;
     width: 100px;
-    margin-bottom: 50px;
+    margin-bottom: 55px;
 }
 
 /* Text */
@@ -378,7 +378,7 @@ section span{
     left: 50%;
     width: 2px;
     height: 2px;
-    background: #fff;
+    background: #0044ff;
     border-radius: 50%;
     box-shadow: 0 0 0 1px rgba(100, 100, 255, 0.1), 0 0 0 2px rgba(100, 100, 255, 0.1), 0 0 5px rgba(100, 100, 255, 1)  ;
     overflow: visible !important;
