Removed cursor after rocket launch

--- a/css/bigbang.css
+++ b/css/bigbang.css
@@ -8,6 +8,10 @@ body {
     user-select: none;
 }
 
+html:has( .launch) * {
+    cursor: none !important;
+}
+
 * {
     overflow: hidden !important;
 }
