--- a/css/bigbang.css
+++ b/css/bigbang.css
@@ -74,6 +74,11 @@ hr {
     margin-bottom: 60px;
 }
 
+.icon__interface {
+  position: absolute;
+  z-index: 999;
+}
+
 /* Text */
 .text-container {
     width: 100%;
@@ -96,11 +101,34 @@ hr {
     text-transform: uppercase;
     font-size: 66px;
     display: inline-block;
-    background: linear-gradient(to right, #3149c3, #fe53bb 100%);
+    background: 
+    linear-gradient(
+      137.48deg,
+      #1b4fde 10%,
+      #fe53bb 45%,
+      #8f51ea 67%,
+      #0044ff 87%
+    );
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
     font-weight: 600;
+    background-size: 200% 200%;
+    animation: gradient_301 5s ease infinite;
+}
+
+@keyframes gradient_301 {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 a {
@@ -339,43 +367,6 @@ button:hover span {
   transform: translateX(7px);
 }
 
-/* Icon */
-.fa-star:nth-child(1) {
-  color: #7878ff;
-  filter: blur(0.8px);
-  font-size: 14px;
-  animation: reflexion-left 2s infinite;
-  transform: translateY(-8px);
-}
-.fa-star:nth-child(2) {
-  color: #dd93ed;
-  filter: blur(0.9px);
-  font-size: 14px;
-  animation: reflexion-right 2s infinite;
-  transform: translateY(-8px);
-}
-@keyframes reflexion-left {
-  0% {
-    transform: translateY(-8px) (0deg) scale(1);
-  }
-  50% {
-    transform: translateY(-8px) rotate(-10deg) scale(1.1);
-  }
-  100% {
-    transform: translateY(-8px) rotate(0deg) scale(1);
-  }
-}
-@keyframes reflexion-right {
-  0% {
-    transform: translateY(-8px) rotate(0deg) scale(1);
-  }
-  50% {
-    transform: translateY(-8px) rotate(10deg) scale(1.1);
-  }
-  100% {
-    transform: translateY(-8px) rotate(0deg) scale(1);
-  }
-}
 /* Planet */
 #planet {
     border: solid #000116 1px;
@@ -395,7 +386,8 @@ button:hover span {
                 inset 0 0 80px 3px #5b51ea50,
                 inset 0 0 120px 4px #7253fe10;
     overflow: hidden;
-    display: none;
+    opacity: 0;
+    transition: all 2000ms;
 }
 
 /* Stars */
