Illustration placement implementation

--- a/css/style.css
+++ b/css/style.css
@@ -374,7 +374,7 @@ a:hover .icon__button {
   font-size: 16px !important;
 }
 
-.icon__interface {
+.illustration {
   position: absolute;
   z-index: 999;
 }
