Changed section title font

--- a/css/bigbang.css
+++ b/css/bigbang.css
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: 'aerospace';
+    src: url('/fonts/vipnagorgialla/Vipnagorgialla\ Rg.otf') format('opentype');
+    font-weight: normal;
+}
+
 body {
     height: 100vh;
     position: relative;
