--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,12 @@
 /*----------------------------------------*/
 /* Template default CSS
 /*----------------------------------------*/
+@font-face {
+    font-family: 'aerospace';
+    src: url('/fonts/vipnagorgialla/Vipnagorgialla\ Rg.otf') format('opentype');
+    font-weight: normal;
+}
+
 html {
   overflow-x: hidden !important;
 }
@@ -211,6 +217,7 @@ section>.container {
 }
 .section-title {
   z-index: 11 !important;
+  font-family: aerospace !important;
 }
 .about {
   margin-top: 200px;
