Changed shooting star timing

--- a/css/bigbang.css
+++ b/css/bigbang.css
@@ -10,7 +10,7 @@ body {
     margin: 0;
     overflow: hidden;
     background-color: #000110;
-    font-family: "Josefin Sans", sans-serif;
+    font-family: "poppins", sans-serif;
     user-select: none;
 }
 
