--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,8 @@ h6 {
 p {
   font-size: 16px;
   font-family: "Josefin Sans", sans-serif;
-  color: #b0b4c1;
+  color: #fff;
+  opacity: 0.9;
   font-weight: 400;
   line-height: 26px;
   margin: 0 0 15px 0;
@@ -171,6 +172,15 @@ select:focus,
 button:focus,
 textarea:focus {
   outline: none;
+}
+
+input::placeholder, textarea::placeholder {
+  color: #fff;
+  opacity: 0.9;
+}
+
+input:focus::placeholder, textarea:focus::placeholder {
+  opacity: 0.5;
 }
 
 a:hover,
@@ -653,7 +663,8 @@ a:hover .icon__button {
   margin: 5px auto;
 }
 .owl-dots button {
-  color: #b0b4c1;
+  color: #fff;
+  opacity: 0.9;
   font-size: 18px;
   font-family: "Play", sans-serif;
   margin-right: 16px;
@@ -928,7 +939,8 @@ a:hover .icon__button {
 }
 
 .skills .skills-item.item-white path {
-  fill: #b0b4c1;
+  fill: #fff;
+  opacity: 0.9;
 }
 
 .skills .skills-item.item-white:hover .icon path {
@@ -936,11 +948,13 @@ a:hover .icon__button {
 }
 
 .skills .skills-item.item-white:hover .icon svg .svg-path {
-  fill: #b0b4c1;
+  fill: #fff;
+  opacity: 0.9;
 }
 
 .skills .skills-item.item-white:hover .tool {
-  background-color: #b0b4c1;
+  background-color: #fff;
+  opacity: 0.9;
   color: #fff !important;
 }
 
@@ -1151,7 +1165,8 @@ a:hover .icon__button {
   font-weight: 700;
 }
 .work__item__hover ul li {
-  color: #b0b4c1;
+  color: #fff;
+  opacity: 0.9;
   list-style: none;
   font-size: 16px;
   margin-right: 23px;
@@ -1494,7 +1509,8 @@ a:hover .icon__button {
   list-style: none;
 }
 .footer__option__item ul li a {
-  color: #b0b4c1;
+  color: #fff;
+  opacity: 0.9;
   font-size: 16px;
   font-weight: 300;
   line-height: 32px;
@@ -1586,12 +1602,14 @@ a:hover .icon__button {
   right: -22px;
   top: -3px;
   content: "/";
-  color: #b0b4c1;
+  color: #fff;
+  opacity: 0.9;
   font-size: 20px;
 }
 .breadcrumb__links span {
   font-size: 16px;
-  color: #b0b4c1;
+  color: #fff;
+  opacity: 0.9;
   font-weight: 300;
   display: inline-block;
 }
@@ -1821,7 +1839,8 @@ a:hover .icon__button {
 # Resume Section
 --------------------------------------------------------------*/
 .resume {
-  color: #b0b4c1;
+  color: #fff;
+  opacity: 0.9;
 }
 
 .resume .resume-title {
@@ -1873,7 +1892,8 @@ a:hover .icon__button {
 
 .resume .resume-item ul li {
   padding-bottom: 10px;
-  color: #b0b4c1;
+  color: #fff;
+  opacity: 0.9;
 }
 
 .resume .resume-item:last-child {
@@ -1910,7 +1930,8 @@ a:hover .icon__button {
 .portfolio__filter li {
   list-style: none;
   font-size: 16px;
-  color: #b0b4c1;
+  color: #fff;
+  opacity: 0.9;
   margin-right: 5px;
   display: inline-block;
   padding: 6px 22px;
@@ -1985,7 +2006,8 @@ a:hover .icon__button {
   font-weight: 300;
   margin-right: 24px;
   position: relative;
-  color: #b0b4c1;
+  color: #fff;
+  opacity: 0.9;
 }
 .portfolio__item__text ul li:after {
   position: absolute;
@@ -2002,7 +2024,8 @@ a:hover .icon__button {
 .portfolio__item__text span {
   font-size: 16px;
   font-weight: 300;
-  color: #b0b4c1;
+  color: #fff;
+  opacity: 0.9;
   display: block;
 }
 
@@ -2155,223 +2178,6 @@ a:hover .icon__button {
 }
 .blog__hero__text ul li span {
   text-transform: uppercase;
-}
-
-/*---------------------
-  Blog Details
------------------------*/
-.blog-details {
-  background: #000116;
-}
-
-.blog__details__text {
-  margin-bottom: 30px;
-}
-.blog__details__text p {
-  font-size: 18px;
-  line-height: 29px;
-  font-weight: 300;
-  margin-bottom: 20px;
-}
-.blog__details__text p:last-child {
-  margin-bottom: 0;
-}
-
-.blog__details__quote {
-  border: 1px solid rgba(225, 225, 225, 0.8);
-  padding: 35px 90px 35px 40px;
-  position: relative;
-  margin-bottom: 35px;
-}
-.blog__details__quote p {
-  font-size: 22px;
-  font-weight: 300;
-  line-height: 35px;
-  font-style: italic;
-  margin-bottom: 10px;
-}
-.blog__details__quote h6 {
-  font-size: 15px;
-  color: #b0b4c1;
-  letter-spacing: 0.5px;
-  text-transform: uppercase;
-  color: #ffffff;
-}
-.blog__details__quote i {
-  font-size: 36px;
-  color: #1b4fde;
-  position: absolute;
-  right: 30px;
-  bottom: 25px;
-}
-
-.blog__details__desc {
-  margin-bottom: 50px;
-}
-.blog__details__desc p {
-  font-size: 18px;
-  line-height: 29px;
-  font-weight: 300;
-  margin-bottom: 20px;
-}
-.blog__details__desc p:last-child {
-  margin-bottom: 0;
-}
-
-.blog__details__tags {
-  padding-bottom: 60px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-  margin-bottom: 65px;
-}
-.blog__details__tags span {
-  display: inline-block;
-  font-size: 15px;
-  color: #ffffff;
-  font-weight: 300;
-  margin-right: 25px;
-}
-.blog__details__tags a {
-  font-size: 16px;
-  font-weight: 300;
-  color: #ffffff;
-  display: inline-block;
-  margin-right: 11px;
-  padding: 8px 15px 7px;
-  margin-bottom: 5px;
-  background: rgba(255, 255, 255, 0.1);
-}
-
-.blog__details__option {
-  margin-bottom: 40px;
-}
-
-.blog__details__option__item {
-  margin-bottom: 30px;
-  overflow: hidden;
-  display: block;
-}
-.blog__details__option__item h5 {
-  color: #ffffff;
-  font-size: 15px;
-  font-weight: 700;
-  text-transform: uppercase;
-  margin-bottom: 25px;
-}
-.blog__details__option__item h5 i {
-  font-size: 18px;
-  margin-right: 5px;
-}
-.blog__details__option__item.blog__details__option__item--right h5 {
-  text-align: right;
-}
-.blog__details__option__item.blog__details__option__item--right h5 i {
-  margin-right: 0;
-  margin-left: 5px;
-}
-.blog__details__option__item.blog__details__option__item--right .blog__details__option__item__img {
-  float: right;
-  margin-right: 0;
-  margin-left: 25px;
-}
-.blog__details__option__item.blog__details__option__item--right .blog__details__option__item__text {
-  margin-right: 25px;
-  text-align: right;
-  float: none;
-}
-
-.blog__details__option__item__img {
-  float: left;
-  margin-right: 25px;
-}
-
-.blog__details__option__item__text {
-  overflow: hidden;
-}
-.blog__details__option__item__text h6 {
-  color: #ffffff;
-  line-height: 21px;
-  font-weight: 700;
-  margin-bottom: 5px;
-}
-.blog__details__option__item__text span {
-  font-size: 14px;
-  color: #777777;
-  font-weight: 300;
-}
-
-.blog__details__recent {
-  margin-bottom: 60px;
-}
-.blog__details__recent h4 {
-  color: #ffffff;
-  font-weight: 700;
-  text-transform: uppercase;
-  margin-bottom: 35px;
-  text-align: center;
-}
-
-.blog__details__recent__item {
-  margin-bottom: 30px;
-}
-.blog__details__recent__item img {
-  min-width: 100%;
-  margin-bottom: 20px;
-}
-.blog__details__recent__item h5 {
-  color: #ffffff;
-  font-weight: 700;
-  line-height: 23px;
-  margin-bottom: 4px;
-}
-.blog__details__recent__item span {
-  color: #777777;
-  font-size: 14px;
-  font-weight: 300;
-}
-
-.blog__details__comment h4 {
-  color: #ffffff;
-  font-weight: 700;
-  text-transform: uppercase;
-  margin-bottom: 35px;
-  text-align: center;
-}
-.blog__details__comment form textarea {
-  height: 120px;
-  width: 100%;
-  border: 1px solid rgba(225, 225, 225, 0.5);
-  background: transparent;
-  font-size: 16px;
-  color: #b0b4c1;
-  padding-top: 12px;
-  padding-left: 20px;
-  font-weight: 300;
-  margin-bottom: 14px;
-  resize: none;
-}
-.blog__details__comment form textarea:placeholder {
-  color: #b0b4c1;
-}
-
-.input__list {
-  margin-right: -20px;
-  overflow: hidden;
-}
-.input__list input {
-  height: 50px;
-  width: calc(33.33% - 20px);
-  float: left;
-  border: 1px solid rgba(225, 225, 225, 0.5);
-  background: transparent;
-  font-size: 16px;
-  color: #b0b4c1;
-  padding-left: 20px;
-  font-weight: 300;
-  margin-right: 20px;
-  margin-bottom: 20px;
-}
-.input__list input:placeholder {
-  color: #b0b4c1;
 }
 
 /*---------------------
@@ -2532,7 +2338,8 @@ a:hover .icon__button {
   transition: all, 0.3s;
 }
 .contact__form form input:placeholder {
-  color: #b0b4c1;
+  color: #fff;
+  opacity: 0.9;
 }
 .contact__form form input:focus {
   border-color: #e1e1e1;
@@ -2544,7 +2351,8 @@ a:hover .icon__button {
   background: inherit;
   border: solid #040d44 1px;
   font-size: 16px;
-  color: #b0b4c1;
+  color: #fff;
+  opacity: 0.9;
   padding-top: 12px;
   padding-left: 20px;
   font-weight: 300;
@@ -2555,7 +2363,8 @@ a:hover .icon__button {
   transition: all, 0.3s;
 }
 .contact__form form textarea:placeholder {
-  color: #b0b4c1;
+  color: #fff;
+  opacity: 0.9;
 }
 .contact__form form textarea:focus {
   border-color: #e1e1e1;
