--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,3 @@
-/*------------------------------------------------------------------
-[Table of contents]
-
-1.  Template default CSS
-	1.1	Variables
-	1.2	Mixins
-	1.3	Flexbox
-	1.4	Reset
-2.  Helper Css
-3.  Header Section
-4.  Hero Section
-5.  Services Section
-6.  Counter Section
-7.  Team Section
-8.  Latest Section
-9.  Contact
-10.  Footer Style
--------------------------------------------------------------------*/
 /*----------------------------------------*/
 /* Template default CSS
 /*----------------------------------------*/
@@ -225,7 +207,7 @@ section>.container {
   margin-top: 200px;
 }
 section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
-  margin-top: 475px;
+  margin-top: 700px;
 }
 .section-title {
   margin-bottom: 50px;
@@ -1912,6 +1894,8 @@ a:hover .icon__button {
 -----------------------*/
 .portfolio {
   background: #000116;
+  padding-right: 5%;
+  padding-left: 5%;
 }
 
 .portfolio__filter {
