--- a/css/bigbang.css
+++ b/css/bigbang.css
@@ -74,10 +74,9 @@ canvas {
 }
 
 hr {
-    border-bottom: 1px solid #ffffff;
-    width: 150px;
-    margin-top: 20px;
-    margin-bottom: 60px;
+    border-bottom: 1px solid #a0a0ff30;
+    width: 80%;
+    margin-bottom: 50px;
 }
 
 .illustration {
@@ -101,26 +100,6 @@ hr {
 
 .text-container * {
     display: inline-block;
-}
-
-.universe-text {
-    text-transform: uppercase;
-    font-size: 69px;
-    display: inline-block;
-    background: 
-    linear-gradient(
-      137.48deg,
-      #1b4fde 10%,
-      #fe53bb 45%,
-      #8f51ea 67%,
-      #0044ff 87%
-    );
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    font-weight: 600;
-    background-size: 200% 200%;
-    animation: gradient_301 5s ease infinite;
 }
 
 @keyframes gradient_301 {
@@ -167,8 +146,40 @@ a {
 
 #final-text {
     letter-spacing: 15px;
-    font-size: 40px;
+    font-size: 50px;
     transform: scaleY(1.1); 
+    margin-bottom: 40px;
+    font-weight: bolder;
+    line-height: 1.2;
+}
+
+.welcome {
+    font-weight: lighter;
+}
+
+#description-text {
+    margin-bottom: 50px;
+    letter-spacing: 2px;
+    width: 80%;
+}
+
+.universe-text {
+    text-transform: uppercase;
+    font-size: 90px;
+    display: inline-block;
+    background: 
+    linear-gradient(
+      137.48deg,
+      #1b4fde 10%,
+      #fe53bb 45%,
+      #8f51ea 67%,
+      #0044ff 87%
+    );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    background-size: 200% 200%;
+    animation: gradient_301 5s ease infinite;
 }
 
 @media screen and (max-width: 926px) {
