--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,8 @@ h6 {
 }
 
 p {
-  font-size: 16px;
+  font-size: 14px;
+  letter-spacing: 1px;
   font-family: "Josefin Sans", sans-serif;
   color: #fff;
   opacity: 0.9;
@@ -153,6 +154,8 @@ textarea:focus {
 input::placeholder, textarea::placeholder {
   color: #fff;
   opacity: 0.9;
+  font-size: 14px;
+  letter-spacing: 1px;
 }
 
 input:focus::placeholder, textarea:focus::placeholder {
@@ -1622,7 +1625,7 @@ a:hover .icon__button {
 }
 
 .about__text__desc {
-  margin-top: -10px;
+  margin-top: -14px;
 }
 
 .swiper {
@@ -1867,6 +1870,8 @@ a:hover .icon__button {
   padding-bottom: 10px;
   color: #fff;
   opacity: 0.9;
+  font-size: 14px;
+  letter-spacing: 1px;
 }
 
 .resume .resume-item:last-child {
@@ -1886,7 +1891,7 @@ a:hover .icon__button {
 }
 
 .resume-subtitle {
-  text-transform: none !important;
+  padding-bottom: 10px;
 }
 
 /*---------------------
