--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,5 +1,5 @@
 /*----------------------------------------*/
-/* Template default CSS
+/* Base CSS
 /*----------------------------------------*/
 html {
   overflow-x: hidden !important;
@@ -63,20 +63,20 @@ h6 {
 }
 
 .button {
-  background-color: #fe53bb; /* Bouton : rose vif */
-  color: #ffffff; /* Texte du bouton : blanc */
+  background-color: #fe53bb;
+  color: #ffffff;
 }
 
 .button:hover {
-  background-color: #1b4fde; /* Bouton survolé : bleu foncé */
+  background-color: #1b4fde;
 }
 
 .h1 {
-  color: #1b4fde ; /* Titre : bleu foncé */
+  color: #1b4fde ;
 }
 
 primary-btn {
-  color: #fe53bb ; /* Sous-titre : rose vif */
+  color: #fe53bb ;
 }
 
 span:not(.typed) {
@@ -87,11 +87,11 @@ span:not(.typed) {
 }
 
 .a {
-  color: #fe53bb; /* Lien : rose vif */
+  color: #fe53bb;
 }
 
 .a:hover {
-  color: #1b4fde; /* Lien survolé : bleu foncé */
+  color: #1b4fde;
 }
 
 .hello-text {
@@ -99,7 +99,6 @@ span:not(.typed) {
 }
 
 .presentation-text {
-  /* background: linear-gradient(to right, #3147c3, #ff0099 90%); */
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
@@ -248,7 +247,6 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
 }
 
 .set-bg {
-  /* background-color: #000116; */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top center;
@@ -373,67 +371,25 @@ a:hover .icon__button {
   z-index: 999;
 }
 
-/* Preloder */
-#preloder {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: 999999;
-  background: #000;
-}
-
-.loader {
-  width: 40px;
-  height: 40px;
+/* UI balls */
+.ball {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-top: -13px;
-  margin-left: -13px;
-  border-radius: 60px;
-  animation: loader 0.8s linear infinite;
-  -webkit-animation: loader 0.8s linear infinite;
+  animation: float 9s ease-in-out infinite;
+  border-radius: 50%;
+  
+  background:linear-gradient(
+      137.48deg,
+      #1b4fde 10%,
+      #451bde 87%,
+      #451bde 87%,
+      #451bde 87%
+  );
+
+  filter: blur(80px);
+  z-index: 10;
+  opacity: 0.5;
 }
 
-@keyframes loader {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-    border: 4px solid #f44336;
-    border-left-color: transparent;
-  }
-  50% {
-    -webkit-transform: rotate(180deg);
-    transform: rotate(180deg);
-    border: 4px solid #673ab7;
-    border-left-color: transparent;
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-    border: 4px solid #f44336;
-    border-left-color: transparent;
-  }
-}
-@-webkit-keyframes loader {
-  0% {
-    -webkit-transform: rotate(0deg);
-    border: 4px solid #f44336;
-    border-left-color: transparent;
-  }
-  50% {
-    -webkit-transform: rotate(180deg);
-    border: 4px solid #673ab7;
-    border-left-color: transparent;
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    border: 4px solid #f44336;
-    border-left-color: transparent;
-  }
-}
 /*---------------------
   Header
 -----------------------*/
@@ -595,27 +551,6 @@ a:hover .icon__button {
 }
 
 /*---------------------
-  Ball
------------------------*/
-.ball {
-  position: absolute;
-  animation: float 9s ease-in-out infinite;
-  border-radius: 50%;
-  
-  background:linear-gradient(
-      137.48deg,
-      #1b4fde 10%,
-      #451bde 87%,
-      #451bde 87%,
-      #451bde 87%
-  );
-
-  filter: blur(80px);
-  z-index: 10;
-  opacity: 0.5;
-}
-
-/*---------------------
   Hero
 -----------------------*/
 .hero {
@@ -637,37 +572,6 @@ a:hover .icon__button {
 .hero__slider.owl-carousel .owl-item.active .hero__text .primary-btn {
   top: 0;
   opacity: 1;
-}
-.owl-dots {
-  margin: 5px auto;
-}
-.owl-dots button {
-  color: #fff;
-  opacity: 0.9;
-  font-size: 18px;
-  font-family: "Play", sans-serif;
-  margin-right: 16px;
-  position: relative;
-  display: inline-block;
-}
-.owl-dots button.active {
-  color: #ffffff;
-}
-.owl-dots button.active:after {
-  background: #ffffff;
-  height: 2px;
-}
-.owl-dots button:after {
-  position: absolute;
-  left: 0;
-  bottom: -6px;
-  width: 100%;
-  height: 1px;
-  background: rgba(255, 255, 255, 0.3);
-  content: "";
-}
-.owl-dots button:last-child {
-  margin-right: 0;
 }
 .hero__item {
   min-height: 100vh;
@@ -743,71 +647,6 @@ a:hover .icon__button {
   left: 13%;
   margin-bottom: 2px;
 }
-.carousel {
-  width: 100%;
-  padding: 100px 0;
-}
-
-.carousel--wrap {
-  white-space: nowrap;
-}
-
-.carousel--item {
-  display: inline-block;
-  width: 400px;
-  padding: 0 20px;
-  user-select: none;
-} 
-
-.carousel--item figure {
-    position: relative;
-    z-index: 1;
-    display: block;
-    height: 300px;
-    overflow: hidden;
-}
-
-.carousel--item figure img {
-    position: absolute;
-    z-index: 1;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    vertical-align: middle;
-    transform-origin: center;
-}
-
-.carousel--item  figure h2 {
-  position: absolute;
-  z-index: 1;
-  bottom: 1.8vw;
-  font-size: 6vw;
-  bottom: 1vw;
-  color: #fff;
-}
-  
-.carousel--progress {
-  position: absolute;
-  z-index: 2;
-  pointer-events: none;
-  bottom: 0;
-  left: 50%;
-  transform: translate(-50%, 0);
-  width: 20vw;
-  height: 2px;
-  background: #020828;
-} 
-.carousel--progress-bar {
-  position: absolute;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #0044ff;
-  transform: scaleX(0);
-  transform-origin: 0% 0%;
-}
 @media only screen and (max-width: 405px) {
   .hero__image__container::before {
     content: "";
@@ -836,23 +675,6 @@ a:hover .icon__button {
   display: flex;
   align-items: center;
   column-gap: 10px;
-}
-/* .news-title h2:after {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  height: 5px;
-  width: 70px;
-  background: gold;
-  content: "";
-} 
-.news__item__icon:after {
-  border-color: gold !important;
-} */
-
-/* Appliquer l'animation à l'icône */
-.fa-chart-line {
-  color: #fe53bb;
 }
 /*--------------------------------------------------------------
 # Skills Section
@@ -1068,190 +890,6 @@ a:hover .icon__button {
   color: #0044ff !important;
 }
 /*---------------------
-  Work
------------------------*/
-.work {
-  overflow: hidden;
-  background: #000116;
-}
-
-.work__gallery {
-  margin-right: -10px;
-}
-
-.work__item {
-  height: 311px !important;
-  width: calc(16.67% - 10px);
-  margin-right: 10px;
-  margin-bottom: 10px;
-  float: left;
-  position: relative;
-  overflow: hidden;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-.work__item:hover .work__item__hover {
-  bottom: 0;
-}
-.work__item.large__item {
-  height: 633px !important;
-  width: calc(33.33% - 10px);
-}
-.work__item.wide__item {
-  width: calc(33.33% - 10px);
-  height: 311px !important;
-}
-.work__item .play-btn {
-  display: inline-block;
-  color: #ffffff;
-  font-size: 20px;
-  height: 50px;
-  width: 50px;
-  line-height: 50px;
-  text-align: center;
-  border: 1px solid rgba(255, 255, 255, 0.7);
-  border-radius: 50%;
-}
-
-.grid-sizer {
-  width: calc(16.67% - 10px);
-}
-
-.work__item__hover {
-  background: rgba(0, 0, 0, 0.5);
-  position: absolute;
-  left: 0;
-  bottom: -300px;
-  width: 100%;
-  padding: 25px 30px 20px;
-  -webkit-transition: all, 0.5s;
-  -o-transition: all, 0.5s;
-  transition: all, 0.5s;
-}
-.work__item__hover h4 {
-  font-size: 22px;
-  color: #ffffff;
-  font-weight: 700;
-}
-.work__item__hover ul li {
-  color: #fff;
-  opacity: 0.9;
-  list-style: none;
-  font-size: 16px;
-  margin-right: 23px;
-  position: relative;
-  display: inline-block;
-}
-.work__item__hover ul li:after {
-  position: absolute;
-  right: -18px;
-  top: 1px;
-  content: "/";
-}
-.work__item__hover ul li:last-child {
-  margin-right: 0;
-}
-.work__item__hover ul li:last-child:after {
-  display: none;
-}
-
-/*---------------------
-  Counter
------------------------*/
-.counter {
-  background: #000116;
-  height: 840px;
-  padding-top: 380px;
-  overflow: hidden;
-}
-
-.counter__content {
-  padding: 0px 50px;
-}
-
-.counter__item {
-  background: #020828;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-      transform: rotate(45deg);
-  height: 255px;
-  width: 255px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  text-align: center;
-  position: relative;
-  z-index: 1;
-}
-.counter__item::before {
-  position: absolute;
-  left: -1px;
-  bottom: -2px;
-  height: 636px;
-  width: 636px;
-  border-left: 1px solid #333333;
-  border-top: 1px solid #333333;
-  content: "";
-  z-index: -1;
-}
-.counter__item.second__item {
-  margin-top: -185px;
-}
-.counter__item.second__item:before {
-  left: -316px;
-  bottom: -65px;
-  border-right: 1px solid #333333;
-  border-bottom: 1px solid #333333;
-  border-left: none;
-  border-top: none;
-}
-.counter__item.four__item {
-  margin-top: -185px;
-}
-.counter__item.four__item:before {
-  left: -380px;
-  bottom: -380px;
-  border-right: 1px solid #333333;
-  border-bottom: 1px solid #333333;
-  border-left: none;
-  border-top: none;
-}
-.counter__item.third__item:before {
-  left: -65px;
-  bottom: -317px;
-}
-
-.counter__item__text {
-  -webkit-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-      transform: rotate(-45deg);
-}
-.counter__item__text h2 {
-  font-size: 60px;
-  color: #ffffff;
-  font-weight: 700;
-  margin-bottom: 6px;
-  margin-top: 18px;
-}
-.counter__item__text p {
-  color: #ffffff;
-  margin-bottom: 0;
-}
-
-/*---------------------
   Team
 -----------------------*/
 .team {
@@ -1329,81 +967,6 @@ a:hover .icon__button {
   position: absolute;
   right: 0;
   bottom: 0;
-}
-
-/*---------------------
-  Latest
------------------------*/
-.latest {
-  background: #000116;
-  padding-bottom: 80px;
-}
-
-.blog__item.latest__item {
-  margin-bottom: 0;
-}
-.blog__item.latest__item:hover {
-  border: 1px solid #222222 !important;
-  background: url(../img/blog/blog-1.jpg);
-  background-size: cover;
-}
-
-.latest__slider.owl-carousel .owl-item .col-lg-4 {
-  max-width: 100%;
-}
-.latest__slider.owl-carousel .owl-dots {
-  text-align: center;
-  padding-top: 35px;
-}
-.latest__slider.owl-carousel .owl-dots button {
-  height: 8px;
-  width: 8px;
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 50%;
-  margin-right: 10px;
-}
-.latest__slider.owl-carousel .owl-dots button.active {
-  background: #1b4fde;
-}
-.latest__slider.owl-carousel .owl-dots button:last-child {
-  margin-right: 0;
-}
-
-/*---------------------
-  Call To Active
------------------------*/
-.callto {
-  padding-top: 130px;
-}
-.callto.sp__callto {
-  padding-top: 0;
-  background: #000116;
-}
-
-.callto__text h2 {
-  color: #ffffff;
-  font-size: 42px;
-  font-weight: 700;
-  line-height: 55px;
-  margin-bottom: 22px;
-}
-.callto__text p {
-  font-size: 15px;
-  color: #ffffff;
-  opacity: 0.7;
-  text-transform: uppercase;
-  margin-bottom: 55px;
-}
-.callto__text a {
-  color: #ffffff;
-  background: #1b4fde;
-  font-size: 15px;
-  font-weight: 700;
-  font-family: "Play", sans-serif;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-  display: inline-block;
-  padding: 14px 32px 12px;
 }
 
 /*---------------------
@@ -1552,45 +1115,6 @@ a:hover .icon__button {
 }
 
 /*---------------------
-  Breadcrumb
------------------------*/
-.breadcrumb-option {
-  padding-top: 180px;
-}
-
-.breadcrumb__text h2 {
-  color: #ffffff;
-  font-size: 50px;
-  font-weight: 700;
-  margin-bottom: 12px;
-}
-
-.breadcrumb__links a {
-  font-size: 16px;
-  color: #ffffff;
-  font-weight: 300;
-  display: inline-block;
-  margin-right: 32px;
-  position: relative;
-}
-.breadcrumb__links a:after {
-  position: absolute;
-  right: -22px;
-  top: -3px;
-  content: "/";
-  color: #fff;
-  opacity: 0.9;
-  font-size: 20px;
-}
-.breadcrumb__links span {
-  font-size: 16px;
-  color: #fff;
-  opacity: 0.9;
-  font-weight: 300;
-  display: inline-block;
-}
-
-/*---------------------
   About
 -----------------------*/
 .about {
@@ -1647,78 +1171,6 @@ a:hover .icon__button {
 
 .swiper-slide:not(.swiper-slide-visible) {
   filter: blur(5px);
-}
-/*---------------------
-  Testimonial
------------------------*/
-.testimonial {
-  padding-bottom: 60px;
-}
-
-.testimonial__slider.owl-carousel .owl-item .col-lg-4 {
-  max-width: 100%;
-}
-.testimonial__slider.owl-carousel .owl-dots {
-  text-align: center;
-  padding-top: 35px;
-}
-.testimonial__slider.owl-carousel .owl-dots button {
-  height: 8px;
-  width: 8px;
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 50%;
-  margin-right: 10px;
-}
-.testimonial__slider.owl-carousel .owl-dots button.active {
-  background: #1b4fde;
-}
-.testimonial__slider.owl-carousel .owl-dots button:last-child {
-  margin-right: 0;
-}
-
-.testimonial__text {
-  padding: 30px 40px 25px 30px;
-  border: 1px solid #3D3A64;
-  margin-bottom: 25px;
-  position: relative;
-  z-index: 9;
-}
-.testimonial__text P {
-  color: #ffffff;
-  font-size: 18px;
-  font-weight: 300;
-  font-style: italic;
-  line-height: 30px;
-  margin-bottom: 0;
-}
-
-.testimonial__author {
-  padding-left: 30px;
-}
-
-.testimonial__author__pic {
-  float: left;
-  margin-right: 20px;
-}
-.testimonial__author__pic img {
-  height: 50px;
-  width: 50px;
-  border-radius: 50%;
-}
-
-.testimonial__author__text {
-  overflow: hidden;
-}
-.testimonial__author__text h5 {
-  color: #ffffff;
-  font-weight: 700;
-  margin-bottom: 8px;
-}
-.testimonial__author__text span {
-  color: #ffffff;
-  font-size: 14px;
-  font-weight: 300px;
-  display: inline-block;
 }
 
 /*---------------------
@@ -1788,27 +1240,6 @@ a:hover .icon__button {
   transition: all, 0.5s;
   background-size: 300% 300%;
   animation: gradient_301 5s ease infinite;
-}
-
-/*---------------------
-  Services Page
------------------------*/
-.services-page {
-  background: #000116;
-  padding-bottom: 50px;
-}
-
-/*---------------------
-  Logo
------------------------*/
-.logo {
-  background: #000116;
-  padding: 100px 20px;
-}
-
-.logo__carousel.owl-carousel .owl-item img {
-  width: auto;
-  display: inline-block;
 }
 
 /*--------------------------------------------------------------
@@ -2031,134 +1462,6 @@ a:hover .icon__button {
     -ms-flex-align: center;
     -webkit-align-items: center;
     align-items: center;
-}
-
-/*---------------------
-    Blog
------------------------*/
-.blog {
-  background: #000116;
-  display: flex;
-  justify-content: center;
-}
-.blog__item {
-  position: relative;
-  border: gold solid 1px;
-  border: 1px solid #222222;
-  padding: 40px 48px 35px 30px;
-  position: relative;
-  z-index: 1;
-  margin-bottom: 45px;
-  min-height: 500px;
-  background: url(../img/blog/bachelor.jfif) no-repeat;
-  border: solid #333 1px;
-  background-position: 30% 30%;
-  background-size: cover;
-}
-.blog__item::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  z-index: -1;
-}
-.blog__item:hover ul li {
-  color: #ffffff;
-}
-.blog__item:hover p {
-  color: #ffffff;
-}
-.blog__item h4 {
-  color: #ffffff;
-  font-weight: 700;
-  line-height: 31px;
-  margin-bottom: 18px;
-}
-.blog__item ul {
-  margin-bottom: 20px;
-}
-.blog__item ul li {
-  color: #777777;
-  list-style: none;
-  font-size: 14px;
-  font-weight: 300;
-  margin-right: 25px;
-  position: relative;
-  display: inline-block;
-}
-.blog__item ul li:after {
-  position: absolute;
-  right: -16px;
-  top: 0px;
-  content: "/";
-}
-.blog__item ul li:last-child {
-  margin-right: 0;
-}
-.blog__item ul li:last-child:after {
-  display: none;
-}
-.blog__item p {
-  font-weight: 300;
-  line-height: 29px;
-  margin-bottom: 22px;
-}
-.blog__item a {
-  font-size: 16px;
-  color: #ffffff;
-}
-.blog__item a span {
-  font-size: 16px;
-  color: #ffffff;
-  opacity: 0.5;
-  position: relative;
-  top: 4px;
-  margin-left: 5px;
-}
-
-/*---------------------
-  Blog Details Hero
------------------------*/
-.blog-hero {
-  padding: 300px 0 230px;
-}
-
-.blog__hero__text {
-  text-align: center;
-}
-.blog__hero__text h2 {
-  color: #ffffff;
-  font-weight: 700;
-  line-height: 47px;
-  text-transform: uppercase;
-  margin-bottom: 12px;
-}
-.blog__hero__text ul li {
-  font-size: 14px;
-  color: #ffffff;
-  font-weight: 300;
-  list-style: none;
-  display: inline-block;
-  margin-right: 25px;
-  position: relative;
-}
-.blog__hero__text ul li:after {
-  position: absolute;
-  right: -18px;
-  top: 0;
-  content: "/";
-}
-.blog__hero__text ul li:last-child {
-  margin-right: 0;
-}
-.blog__hero__text ul li:last-child:after {
-  display: none;
-}
-.blog__hero__text ul li span {
-  text-transform: uppercase;
 }
 
 /*---------------------
@@ -2448,22 +1751,6 @@ a:hover .icon__button {
     padding-left: 25px;
   }
 
-  .counter__item::before {
-    display: none;
-  }
-
-  .counter__content {
-    padding: 0px 145px 0 50px;
-  }
-
-  .counter__item.second__item {
-    margin-top: -210px;
-  }
-
-  .counter__item.four__item {
-    margin-top: -210px;
-  }
-
   .hero__slider.owl-carousel .owl-dots {
     max-width: 930px !important;
   }
@@ -2478,43 +1765,7 @@ a:hover .icon__button {
   .services__title {
     margin-bottom: 50px;
   }
-
-  .counter__item {
-    -webkit-transform: rotate(0);
-    -ms-transform: rotate(0);
-        transform: rotate(0);
-    margin-bottom: 30px;
-    width: auto;
-  }
-
-  .counter__item::before {
-    display: none;
-  }
-
-  .counter__content {
-    padding: 0;
-  }
-
-  .counter__item.second__item {
-    margin-top: 0;
-  }
-
-  .counter__item.four__item {
-    margin-top: 0;
-  }
-
-  .counter__item__text {
-    -webkit-transform: rotate(0);
-    -ms-transform: rotate(0);
-        transform: rotate(0);
-  }
-
-  .counter {
-    height: auto;
-    padding-top: 100px;
-    padding-bottom: 70px;
-  }
-
+  
   .team__item.team__item--second {
     margin-top: 0;
   }
@@ -2606,42 +1857,6 @@ a:hover .icon__button {
 @media only screen and (max-width: 767px) {
   .services__title {
     margin-bottom: 50px;
-  }
-
-  .counter__item {
-    -webkit-transform: rotate(0);
-    -ms-transform: rotate(0);
-        transform: rotate(0);
-    margin-bottom: 30px;
-    width: auto;
-  }
-
-  .counter__item::before {
-    display: none;
-  }
-
-  .counter__content {
-    padding: 0;
-  }
-
-  .counter__item.second__item {
-    margin-top: 0;
-  }
-
-  .counter__item.four__item {
-    margin-top: 0;
-  }
-
-  .counter__item__text {
-    -webkit-transform: rotate(0);
-    -ms-transform: rotate(0);
-        transform: rotate(0);
-  }
-
-  .counter {
-    height: auto;
-    padding-top: 100px;
-    padding-bottom: 70px;
   }
 
   .team__item.team__item--second {
