--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,28 @@
 /*----------------------------------------*/
+/* Font Import                            */
+/*----------------------------------------*/
+@font-face {
+    font-family: 'good-timing';
+    src: url('../fonts/good-timing/good\ timing\ bd.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+  }
+  
+  @font-face {
+    font-family: 'electrolize';
+    src: url('../fonts/electrolize/Electrolize-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
+  
+  @font-face {
+    font-family: 'audiowide';
+    src: url('../fonts/audiowide/Audiowide-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
+
+/*----------------------------------------*/
 /* Base CSS
 /*----------------------------------------*/
 body {
@@ -7,7 +31,6 @@ body {
     margin: 0;
     overflow: hidden;
     background-color: #000110;
-    font-family: "poppins", sans-serif;
     user-select: none;
 }
 
@@ -77,7 +100,7 @@ canvas {
     text-align: center;
     color: white;
     font-size: 20px;
-    font-family: "Play", sans-serif;
+    font-family: "electrolize", sans-serif;
     position: fixed;
     top: 90%;
     left: 50%;
@@ -95,6 +118,7 @@ canvas {
     margin-bottom: 20px;
     font-weight: bolder;
     line-height: 1.2;
+    font-family: 'good-timing';
 }
 
 .welcome {
@@ -107,11 +131,12 @@ canvas {
     letter-spacing: 1px;
     width: 80%;
     line-height: 28px;
+    font-family: "electrolize", sans-serif;
 }
 
 .universe-text {
     text-transform: uppercase;
-    font-size: 90px;
+    font-size: 94px;
     display: inline-block;
     background: 
     linear-gradient(
@@ -131,7 +156,7 @@ canvas {
 @media screen and (max-width: 926px) {
     #final-text {
         letter-spacing: 5px;
-        font-size: 27px;
+        font-size: 25px;
     }
     .universe-text {
         font-size: 45px;
@@ -206,7 +231,6 @@ canvas {
         );
     background-origin: border-box;
     background-clip: content-box, border-box;
-    font-size: 18px;
 }
 
 #cta-button:hover {
@@ -248,6 +272,10 @@ button::before {
         transparent
     );
     transition: left 0.5s ease-in-out;
+}
+
+button {
+    font-family: 'audiowide';
 }
 
 button:hover::before {
