--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,11 @@ canvas {
 .nav__social a {
     color: white;
     font-size: 25px;
+    transition: transform 200ms ease-out;
+}
+
+.nav__social a:hover {
+    transform: scale(1.3);
 }
 
 /*----------------------------------------*/
