--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -551,10 +551,15 @@ a:hover .icon__button {
   font-size: 18px;
   margin-right: 20px;
 }
+.header__nav__social a svg {
+  transition: transform 200ms ease-out;
+}
+.header__nav__social a svg:hover {
+  transform: scale(1.3);
+}
 .header__nav__social a:last-child {
   margin-right: 0;
 }
-
 .slicknav_menu {
   display: none;
 }
