--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -395,7 +395,7 @@ a:hover .icon__button {
       #451bde 87%
   );
 
-  filter: blur(80px);
+  filter: blur(90px);
   z-index: 10;
   opacity: 0.5;
 }
@@ -637,7 +637,6 @@ a:hover .icon__button {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-top: 50px;
 }
 .hero__image__container {
   position: relative;
@@ -646,20 +645,21 @@ a:hover .icon__button {
 }
 .hero__image__container::before {
   content: "";
-  height: 58%;
-  width: 98%;
+  height: 28.5rem;
+  width: 100%;
   position: absolute;
-  bottom: 16%;
-  right: 1%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -43.8%);
   border: solid rgba(0, 0, 255, 0.2) 2px;
   animation: shadow-apparition 0.7s ease-in 1.2s forwards;
 }
 .hero__image {
-  width: 460px !important;
+  width: 30rem !important;
   position: absolute;
-  bottom: 15.8%;
-  left: 13%;
-  margin-bottom: 2px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-48%, -60%) !important;
 }
 @media only screen and (max-width: 405px) {
   .hero__image__container::before {
@@ -1761,11 +1761,6 @@ a:hover .icon__button {
 
 
 /*--------------------------------- Responsive Media Queries -----------------------------*/
-@media only screen and (min-width: 1200px) {
-  .container {
-    max-width: 1170px;
-  }
-}
 /* Medium Device = 1200px */
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .header__nav__menu {
