--- a/css/main.css
+++ b/css/main.css
@@ -405,7 +405,7 @@ model-viewer {
     height: 40rem;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    opacity: 0;
+    display: none;
     transform: scale(0);
     transition: all 1s ease-in-out;
 }
